# ufo-filters

./: .gitignore  .readthedocs.yml  .travis.yml  CMakeLists.txt  NEWS  README.md  meson.build  meson_options.txt  run_tests.py
common/cmake/: FindOpenCL.cmake  PkgConfigVars.cmake
contrib/: CMakeLists.txt  config.h.in  config.h.meson.in  meson.build  ufo-med-mad-reject-2d-task.c  ufo-med-mad-reject-task.c  ufo-med-mad-reject-task.h  ufo-ocl-1liner-task.c  ufo-stat-monitor-task.c  ufo-stat-monitor-task.h  ufo-sxc-common.c  ufo-sxc-common.h
contrib/kernels/: med-mad-reject-2d.cl  med-mad-reject.cl  stat-monitor.cl
contrib/sxc/: CMakeLists.txt
contrib/sxc/docs/: sxcfilters.rst
contrib/sxc/src/: CMakeLists.txt  ufo-med-mad-reject-2d-task.c  ufo-med-mad-reject-2d-task.h  ufo-med-mad-reject-task.c  ufo-ocl-1liner-task.c  ufo-ocl-1liner-task.h  ufo-stat-monitor-task.c
contrib/sxc/src/kernels/: med-mad-reject.cl  ocl-1liner-skel.cl  stat-monitor.cl
debian/: changelog  control  rules  ufo-filters-doc.install  ufo-filters.install
docs/: CMakeLists.txt  Makefile  changes.rst  conf.py  examples.rst  filters.rst  generators.rst  index.rst  install.rst  kernels.rst  meson.build  piv.rst  refs.bib  sinks.rst
docs/contrib/: index.rst  sxcfilters.rst
docs/filters/: index.rst
docs/generators/: index.rst
docs/sinks/: index.rst
docs/sphinxgobject/: __init__.py  domain.py
src/: CMakeLists.txt  UfoFilters-docs.xml.in  UfoFilters-sections.txt.in  UfoFilters.types.in  arithmetics.cl  averager.ufo-plugin.in  backproject.cl  complex.cl  config.h.in  config.h.meson.in  copy.ufo-plugin.in  cut_sinogram_kernel.cl  dfi_sinc_kernel.cl  downsample.cl  expr-parser.c  expr-parser.h  expr-scanner.c.in  expr-scanner.h  fft.cl  filter.cl  filters.cl  forwardproject.cl  gaussian.cl  histthreshold.cl  interpolator.cl  interpolator.ufo-plugin.in  lamino-roi.c  lamino-roi.h  lkflow.cl  meson.build  metaballs.cl  nlm.cl  oflk_cl_buffer.c  oflk_cl_buffer.h  oflk_cl_image.c  oflk_cl_image.h  oflk_pyramid.c  oflk_pyramid.h  oflk_util.h  optical-flow-lucas-kanade.ufo-plugin.in  (+333 more)
src/common/: hdf5.c  hdf5.h  ufo-addressing.h  ufo-common.c  ufo-common.h  ufo-conebeam.c  ufo-fft.c  ufo-fft.h  ufo-interpolation.h  ufo-math.c  ufo-math.h
src/kernels/: .filter.cl.swp  .reductor.cl.swp  CMakeLists.txt  backproject.cl  bandpass.cl  bin.cl  complex.cl  cut.cl  default.cl  denoise.cl  dfi-sinc.h  dfi.cl  dfi_sinc_kernel.cl  downsample.cl  edge.cl  ffc.cl  fft.cl  fftmult.cl  filter.cl  flip.cl  forwardproject.cl  gradient.cl  histthreshold.cl  interpolator.cl  median.cl  meson.build  metaballs.cl  morphology.cl  nlm.cl  online-backproject.cl  opencl-reduce.cl  opencl.cl  ordfilt.cl  pad.cl  phase-retrieval-simple.cl  phase-retrieval.cl  phase_retrieval.cl  piv.cl  polar.cl  reductor.cl  (+14 more)
src/kernels/templates/: center_template.in  common.in  lamino_template.in  roll_template.in  z_template.in
src/kernels/tools/: make_burst_kernels.py
src/readers/: ufo-edf-reader.c  ufo-hdf5-reader.c  ufo-hdf5-reader.h  ufo-raw-reader.c  ufo-reader.c  ufo-reader.h  ufo-tiff-reader.c
src/writers/: ufo-hdf5-writer.c  ufo-hdf5-writer.h  ufo-jp2-writer.c  ufo-jp2-writer.h  ufo-jpeg-writer.c  ufo-raw-writer.c  ufo-tiff-writer.c  ufo-writer.c  ufo-writer.h
tests/: CMakeLists.txt  check-fft  check-gradient  check-multipage-readers  foo.tif  make-input-multipage-readers  meson.build  runtests.sh  test-142.sh  test-149.sh  test-153.sh  test-161.sh  test-177.sh  test-core-149.sh  test-fft.sh  test-file-write-regression.sh  test-gradient.sh  test-multipage-readers.sh  test-nlm.sh  test_buffer_input.py  test_fft.py  test_memin.py  test_rw.py  test_rw_partial.py  test_swap_quadrants.py  tests.py  ufotest.py
tests/data/: sinogram-00000.tif  sinogram-00001.tif  sinogram-00002.tif  sinogram-00003.tif  sinogram-00004.tif  sinogram-00005.tif  sinogram-00006.tif  sinogram-00007.tif  sinogram-00008.tif  sinogram-00009.tif  sinogram-00010.tif  sinogram-00011.tif  sinogram-00012.tif  sinogram-00013.tif  sinogram-00014.tif  sinogram-00015.tif
tests/expected/: phantom-00000.tif  phantom-00001.tif  phantom-00002.tif  phantom-00003.tif  phantom-00004.tif  phantom-00005.tif  phantom-00006.tif  phantom-00007.tif  phantom-00008.tif  phantom-00009.tif  phantom-00010.tif  phantom-00011.tif  phantom-00012.tif  phantom-00013.tif  phantom-00014.tif  phantom-00015.tif
tests/integration_tests/: CMakeLists.txt  run_local.sh  test-complete-local-setup.c  test-complete-remote-setup.c  test-suite.c  test-suite.h
utils/: CMakeLists.txt  rofex-configure.c  rofex.c  rofex.h
